--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p>&copy; 2025 XDN'Technologies. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="scripts/route.js"></script>
-    <script src="scripts/btnroutes.js"></script>
-    <script src="scripts/service.js"></script>
+    <script src="/xdntwebsite/scripts/route.js"></script>
+    <script src="/xdntwebsite/scripts/btnroutes.js"></script>
+    <script src="/xdntwebsite/scripts/service.js"></script>
 </body>
 </html>
