--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo"><img src="/assets/xdntImage.png" width="150" height="120">
+            <div class="logo"><img src="/xdntwebsite/assets/xdntImage.png" width="150" height="120">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Servicios</a></li>
