--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo"><img src="/xdntwebsite/assets/xdntImage.png" width="150" height="120">
+            <div class="logo"><img src="/assets/xdntImage.png" width="150" height="120">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Servicios</a></li>
@@ -36,8 +36,8 @@
         <p>&copy; 2025 XDN'Technologies. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="/xdntwebsite/scripts/route.js"></script>
-    <script src="/xdntwebsite/scripts/btnroutes.js"></script>
-    <script src="/xdntwebsite/scripts/service.js"></script>
+    <script src="/scripts/route.js"></script>
+    <script src="/scripts/btnroutes.js"></script>
+    <script src="/scripts/service.js"></script>
 </body>
 </html>
